--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
 		</div>
 		<ul>
 			<li><a href="#">Dashboard</a></li>
-			<li><a href="#">Features</a>
-				<ul>
+			<li><a href="#" class="feat-btn">Features
+				<span class="fas fa-caret-down first"></span>
+			</a>
+				<ul class="feat-show">
 					<li><a href="#">Pages</a></li>
 					<li><a href="#">Elements</a></li>
 				</ul>
 			</li>
-			<li><a href="#">Services</a>
-				<ul>
+			<li><a href="#" class="serv-btn">Services
+				<span class="fas fa-caret-down second"></span>
+			</a>
+				<ul class="serv-show">
 					<li><a href="#">App Design</a></li>
 					<li><a href="#">Web Design</a></li>
 				</ul>
@@ -32,5 +36,13 @@
 			<li><a href="#">Feedback</a></li>
 		</ul>
 	</nav>
+	<script>
+		$('.feat-btn').click(function(){
+			$('nav ul .feat-show').toggleClass("show");
+		});
+		$('.serv-btn').click(function(){
+			$('nav ul .serv-show').toggleClass("show1");
+		});
+	</script>
 </body>
 </html>
