--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	<script type="text/javascript" src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
+	<div class="btn">
+		<span class="fas fa-bars">
+			
+		</span>
+	</div>
 	<nav class="sidebar">
 		<div class="text">
 			Side Menu
@@ -36,18 +41,6 @@
 			<li><a href="#">Feedback</a></li>
 		</ul>
 	</nav>
-	<script>
-		$('.feat-btn').click(function(){
-			$('nav ul .feat-show').toggleClass("show");
-			$('nav ul .first').toggleClass("rotate");
-		});
-		$('.serv-btn').click(function(){
-			$('nav ul .serv-show').toggleClass("show1");
-			$('nav ul .second').toggleClass("rotate");
-		});
-		$('nav ul li').click(function(){
-			$(this).addClass("active").siblings().removeClass("active");
-		});
-	</script>
+	<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
